# rust_playground

./: Cargo.toml
src/: a.py  alternate_casing.rs  box_thine_list.rs  cakes.rs  close_compare.rs  encode_dupli.rs  file_handle.rs  find_file.rs  find_like_file.rs  fizzbuzz.rs  gimme_middle.rs  greet.rs  increment_string.rs  isbn.rs  linear_search.rs  longest_consec.rs  main.rs  main_2.rs  match_day.rs  merge_arr.rs  multiples.rs  nb_dig.rs  num_to_str.rs  output.txt  pow_2.rs  readfile.rs  reverse_letters.rs  sorting.rs  stray.rs  student_list.rs  sum_dig_pow.rs  timeit.rs  tortoise_race.rs
