[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamic-list = "0.3.0"
futures = "0.3.30"
itertools = "0.13.0"
num = "0.4.2"
num-bigint = "0.4.5"
num-traits = "0.2.19"
rayon = "1.10.0"
reqwest = {version = "0.12.5", features = ["blocking"]}
serde_json = "1.0.122"
